# NFL-elo-model

./: .dockerignore  Dockerfile  EDA-comments-Codex.ipynb  EDA.ipynb  README.md  Untitled1.ipynb  app.py  play_tables.ipynb  pyproject.toml  requirements.txt  schedule_features_2016_2025.parquet  spread_total.ipynb
analysis/: build_nfl_pregame_features.ipynb  eda_feature_diagnostics.ipynb  nfl_game_outcomes_modeling.ipynb
data/: final_first_model.parquet  schedule_features_2016_2025.parquet  team_priors_latest.parquet  team_stadium_latest.parquet
data/models/: home_win_logit.joblib  spread_ridge_timecv.joblib  total_ridge.joblib
scripts/: build_model_table.py  build_schedule_features.py  predict_single_game.py  train_models.py
src/nfl_elo_model/: __init__.py  paths.py  predict.py  schema.py  validate.py
tests/: test_data_contracts.py
