[project]
name = "nfl-elo-model"
version = "0.1.0"
description = "NFL pregame modeling workflow (Elo + EPA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.4.0",
    "nflreadpy>=0.1.5",
    "notebook>=7.5.2",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.36.0",
]
